WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172145
Captions and subtitles not showing up in picture-in-picture for MSE content.
https://bugs.webkit.org/show_bug.cgi?id=172145
Summary
Captions and subtitles not showing up in picture-in-picture for MSE content.
Jeremy Jones
Reported
2017-05-15 16:53:06 PDT
Captions and subtitles not showing up in picture-in-picture for MSE content.
Attachments
Patch
(6.95 KB, patch)
2017-05-15 16:58 PDT
,
Jeremy Jones
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch for landing.
(6.94 KB, patch)
2017-05-16 14:35 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2017-05-15 16:53:48 PDT
rdar://problem/28738340
Jeremy Jones
Comment 2
2017-05-15 16:58:03 PDT
Created
attachment 310188
[details]
Patch
Eric Carlson
Comment 3
2017-05-15 20:25:40 PDT
Comment on
attachment 310188
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=310188&action=review
> Source/WebCore/ChangeLog:11 > + This movest the TextTrackRepresentation platfrom layer into the fullscreen container layer when going into
Nit: movest
> Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:938 > + FloatRect videoFullscreenFrame = m_videoFullscreenLayerManager->videoFullscreenFrame();
Nit: auto
> Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:939 > + CGRect videoRect = [m_sampleBufferDisplayLayer bounds];
Ditto
> Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:940 > + CGRect textFrame = m_sampleBufferDisplayLayer ? videoRect : CGRectMake(0, 0, videoFullscreenFrame.width(), videoFullscreenFrame.height());
Ditto
Jeremy Jones
Comment 4
2017-05-16 14:34:58 PDT
Comment on
attachment 310188
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=310188&action=review
>> Source/WebCore/ChangeLog:11 >> + This movest the TextTrackRepresentation platfrom layer into the fullscreen container layer when going into > > Nit: movest
Fixed.
>> Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:938 >> + FloatRect videoFullscreenFrame = m_videoFullscreenLayerManager->videoFullscreenFrame(); > > Nit: auto
Done.
>> Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:939 >> + CGRect videoRect = [m_sampleBufferDisplayLayer bounds]; > > Ditto
Done.
>> Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:940 >> + CGRect textFrame = m_sampleBufferDisplayLayer ? videoRect : CGRectMake(0, 0, videoFullscreenFrame.width(), videoFullscreenFrame.height()); > > Ditto
Done.
Jeremy Jones
Comment 5
2017-05-16 14:35:39 PDT
Created
attachment 310298
[details]
Patch for landing.
WebKit Commit Bot
Comment 6
2017-05-16 15:27:16 PDT
Comment on
attachment 310298
[details]
Patch for landing. Clearing flags on attachment: 310298 Committed
r216951
: <
http://trac.webkit.org/changeset/216951
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug